# hsfluidsynth

./: .gitignore  README.md  fluidsynth.cabal
Sound/: Fluidsynth.hs
Sound/Fluidsynth/: Internal.hsc
examples/: RenderMidiExample.hs
test/: FileRendererSpec.hs  IntegrationSpec.hs  LoggingSpec.hs  PCMBufferSpec.hs  PlayerSpec.hs  RenderMidi.hs  RenderPCM.hs  ResourceSpec.hs  SettingsSpec.hs  SynthSpec.hs  SynthWriteFloatSpec.hs  SynthWriteSpec.hs
test/data/: test.mid
