cabal-version: 3.0

name:                fluidsynth
version:             0.3.0.0
synopsis:            Haskell bindings to FluidSynth
description:         Simple Haskell bindings to FluidSynth.
homepage:            https://github.com/MostAwesomeDude/hsfluidsynth
license:             MIT
license-file:        LICENSE
author:              Corbin Simpson
maintainer:          cds@corbinsimpson.com
-- copyright:
category:            Sound
build-type:          Simple

source-repository head
  type:                git
  location:            https://github.com/MostAwesomeDude/hsfluidsynth.git

library
  exposed-modules:     Sound.Fluidsynth
  other-modules:       Sound.Fluidsynth.Internal
  build-depends:       base >= 4.17 && < 5
                     , bindings-DSL >= 1.0.6 && < 1.1
                     , containers >= 0.5 && < 0.8
                     , directory >= 1.3 && < 1.4
  pkgconfig-depends:    fluidsynth
  default-extensions:  ForeignFunctionInterface
  default-language:    Haskell2010
